height fix, hopefully also fixing the sign up overlap

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -16,8 +16,8 @@ h1+small:hover a.btn { display:inline; position:absolute; right:0; top:-.4em; }
 
 #signin { margin-top:5.5em; padding:0 8em 1em 7em; white-space:nowrap; height:2.6em; }
 #write #signin { position:relative; float:right; top:1em; margin:0; }
-.content { height:24em; }
-#steps { position:absolute; top:18.5em; }
+.content { height:27em; }
+#steps { position:absolute; top:22em; }
 .step, .step.done, .step.done:hover { opacity:.5; position:relative; }
 .step.active, .step:hover { opacity:1; }
 .step.signin #email { margin:5em 0 .5em; width:10em; }
